cmd line options, velocity checking, better efficiency

--- a/README
+++ b/README
@@ -1,9 +1,19 @@
-doodling towards making a servomotor CNC drive with optimized velocity profiling.
 
-velo.c	reads x,y,z stream and optimizes start/end velocities to obey vmax/amax
-interp  progress xres, yres step by step for a given segment
-ramp	awk script for computing time within a segment
+doodling towards making a servomotor CNC drive with optimized velocity
+profiling. 
 
-Work is to combine interp and ramp into a helper routine and then merge with velo
-to do complete stepper timing for 3 axes.
+velo.c: reads x,y,z stream and optimizes start/end velocities to obey
+vmax/amax 
+
+interp: awk script progress xres, yres step by step for a given segment 
+
+ramp: awk script for computing time within a segment
+
+interpolate.c: rewriting interp/ramp in c format as a support routine
+
+Work is to combine interp and ramp into a helper routine and then merge
+with velo to do complete stepper timing for N axes. 
+
+3dstep: takes output of velo and processes it into a stream of step
+commands for feeding as a bytestream to an FTDI USB fifo chip.
 
